<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_movies">Hello from Movies</string>
    <string name="hello_tv">Hello from TV Shows</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_desc">Lorem ipsum</string>
    <string name="setting">Setting</string>
    <string name="backdrop">Image Backdrop</string>
    <string name="poster">Image poster</string>
    <string name="year">Release</string>
    <string name="director">Director</string>
    <string name="overview">Overview</string>
    <string name="description">Lorem ipsum lorem lorem ipsum dolo salam hia kurikutsa lorem lorem ipsum dolo salam hia kurikutsa lorem lorem ipsum dolo salam hia kurikutsa lorem lorem ipsum dolo salam hia kurikutsa</string>
    <string name="starting">Cast</string>
    <string name="nameActor">Name Actor</string>

    <!-- Movies -->
    <string-array name="data_title_movies">
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Men in Black: International</item>
        <item>Alita: Battle Angel</item>
        <item>Toy Story 4</item>
        <item>Pokémon Detective Pikachu</item>
        <item>Mortal Engines</item>
        <item>Aladdin</item>
        <item>Dark Phoenix</item>
        <item>Godzilla: King of the Monsters</item>
        <item>The Darkest Mind</item>
    </string-array>

    <string-array name="data_year_movies">
        <item>December 14, 2018</item>
        <item>June 14, 2019</item>
        <item>June 14, 2019</item>
        <item>February 14, 2019</item>
        <item>June 21, 2019</item>
        <item>May 10, 2019</item>
        <item>December 14, 2018</item>
        <item>May 24, 2019</item>
        <item>June 7, 2019</item>
        <item>May 31, 2019</item>
        <item>August 2, 2018</item>
    </string-array>

    <string-array name="data_description_movies">
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>The Men in Black have always protected the Earth from the scum of the universe. In this new adventure, they tackle their biggest, most global threat to date: a mole in the Men in Black organization.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Woody has always been confident about his place in the world and that his priority is taking care of his kid, whether that\'s Andy or Bonnie. But when Bonnie adds a reluctant new toy called "Forky" to her room, a road trip adventure alongside old and new friends will show Woody how big the world can be for a toy. </item>
        <item>In a world where people collect pocket-size monsters (Pokémon) to do battle, a boy comes across an intelligent monster who seeks to be a detective.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.</item>
        <item>The X-Men face their most formidable and powerful foe when one of their own, Jean Grey, starts to spiral out of control. During a rescue mission in outer space, Jean is nearly killed when she\'s hit by a mysterious cosmic force. Once she returns home, this force not only makes her infinitely more powerful, but far more unstable. The X-Men must now band together to save her soul and battle aliens that want to use Grey\'s new abilities to rule the galaxy. </item>
        <item>The new story follows the heroic efforts of the crypto-zoological agency Monarch as its members face off against a battery of god-sized monsters, including the mighty Godzilla, who collides with Mothra, Rodan, and his ultimate nemesis, the three-headed King Ghidorah. When these ancient super-species—thought to be mere myths—rise again, they all vie for supremacy, leaving humanity’s very existence hanging in the balance.</item>
        <item>After a disease kills 98% of America\'s children, the surviving 2% develop superpowers and are placed in internment camps. A 16-year-old girl escapes her camp and joins a group of other teens on the run from the government.</item>
    </string-array>

    <string-array name="data_director_movies">
        <item>Rodney Rothman</item>
        <item>F. Gary Gray</item>
        <item>Robert Rodriguez</item>
        <item>Josh Cooley</item>
        <item>Rob Letterman</item>
        <item>Christian Rivers</item>
        <item>Guy Ritchie</item>
        <item>Simon Kinberg</item>
        <item>Michael Dougherty</item>
        <item>Jennifer Yuh Nelson</item>
    </string-array>

    <string-array name="data_actor_movies">
        <item>Shameik Moore</item>
        <item>Chris Hemsworth</item>
        <item>Rosa Salazar</item>
        <item>Tom Hanks</item>
        <item>Ryan Reynolds</item>
        <item>Hera Hilmar</item>
        <item>Mena Massoud</item>
        <item>Sophie Turner</item>
        <item>Kyle Chandler</item>
        <item>Amandla Stenberg</item>
    </string-array>

    <array name="data_poster_movies">
        <item>@drawable/spiderman</item>
        <item>@drawable/mib</item>
        <item>@drawable/alita</item>
        <item>@drawable/ts</item>
        <item>@drawable/pikachu</item>
        <item>@drawable/mortal_engine</item>
        <item>@drawable/aladdin</item>
        <item>@drawable/dpx</item>
        <item>@drawable/godzilla</item>
        <item>@drawable/tdm</item>
    </array>

    <string-array name="data_imgactor_movies">
        <item>@drawable/act_spiderman</item>
        <item>@drawable/act_mib</item>
        <item>@drawable/act_alita</item>
        <item>@drawable/act_toy</item>
        <item>@drawable/act_pika</item>
        <item>@drawable/act_mort</item>
        <item>@drawable/act_ala</item>
        <item>@drawable/act_dark</item>
        <item>@drawable/act_godz</item>
        <item>@drawable/act_mind</item>
    </string-array>

    <string-array name="data_bd_movies">
        <item>@drawable/bd_spiderman</item>
        <item>@drawable/bd_mib</item>
        <item>@drawable/bd_alita</item>
        <item>@drawable/bd_toy</item>
        <item>@drawable/bd_pika</item>
        <item>@drawable/bd_mort</item>
        <item>@drawable/bd_ala</item>
        <item>@drawable/bd_dark</item>
        <item>@drawable/bd_godz</item>
        <item>@drawable/bd_mind</item>
    </string-array>

    <!-- TV Series -->
    <string-array name="data_title_series">
        <item>My Brilliant Friend</item>
        <item>Game of Thrones</item>
        <item>Stranger Things</item>
        <item>Black Mirror</item>
        <item>Dark</item>
        <item>Love, Death &amp; Robots</item>
        <item>The Umbrella Academy</item>
        <item>Chilling Adventures of Sabrina</item>
    </string-array>

    <string-array name="data_year_series">
        <item>December 6, 2018</item>
        <item>April 17, 2011</item>
        <item>July 15, 2016</item>
        <item>December 4, 2011</item>
        <item>December 1, 2017</item>
        <item>March 15, 2019</item>
        <item>March 29, 2019</item>
        <item>July 14, 2018</item>
    </string-array>

    <string-array name="data_description_series">
        <item>When the most important friend in her life seems to have disappeared without a trace, Elena Greco, a now-elderly woman immersed in a house full of books, turns on her computer and starts writing the story of their friendship.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>When a young boy vanishes, a small town uncovers a mystery involving secret experiments, terrifying supernatural forces, and one strange little girl.</item>
        <item>A contemporary British re-working of The Twilight Zone with stories that tap into the collective unease about our modern world.\n\nOver the last ten years, technology has transformed almost every aspect of our lives before we\'ve had time to stop and question it. In every home; on every desk; in every palm - a plasma screen; a monitor; a smartphone - a black mirror of our 21st Century existence.</item>
        <item>A missing child causes four families to help each other for answers. What they could not imagine is that this mystery would be connected to innumerable other secrets of the small town.</item>
        <item>Terrifying creatures, wicked surprises and dark comedy converge in this NSFW anthology of animated stories presented by Tim Miller and David Fincher.</item>
        <item>A dysfunctional family of superheroes comes together to solve the mystery of their father\'s death, the threat of the apocalypse and more.</item>
        <item>As her 16th birthday nears, Sabrina must choose between the witch world of her family and the human world of her friends. Based on the Archie comic.</item>
    </string-array>

    <string-array name="data_director_series">
        <item>Saverio Costanzo</item>
        <item>David Benioff</item>
        <item>Ross Duffer</item>
        <item>Charlie Brooker</item>
        <item>Baran bo Odar</item>
        <item>Tim Miller</item>
        <item>Steve Blackman</item>
        <item>Roberto Aguirre-Sacasa</item>
    </string-array>

    <string-array name="data_actor_series">
        <item>Gaia Girace</item>
        <item>Emilia Clarke</item>
        <item>Winona Ryder</item>
        <item>Hannah John-Kamen</item>
        <item>Maja Schöne</item>
        <item>Mary Elizabeth Winstead</item>
        <item>Ellen Page</item>
        <item>Kiernan Shipka</item>
    </string-array>

    <string-array name="data_imgactor_series">
        <item>@drawable/act_brill</item>
        <item>@drawable/act_got</item>
        <item>@drawable/act_st</item>
        <item>@drawable/act_bm</item>
        <item>@drawable/act_dark2</item>
        <item>@drawable/act_l</item>
        <item>@drawable/act_um</item>
        <item>@drawable/act_ch</item>
    </string-array>

    <array name="data_poster_series">
        <item>@drawable/pstr_brill</item>
        <item>@drawable/pstr_got</item>
        <item>@drawable/pstr_st</item>
        <item>@drawable/pstr_bm</item>
        <item>@drawable/pstr_dark2</item>
        <item>@drawable/pstr_l</item>
        <item>@drawable/pstr_um</item>
        <item>@drawable/pstr_ch</item>
    </array>

    <string-array name="data_bd_series">
        <item>@drawable/bd_brill</item>
        <item>@drawable/bd_got</item>
        <item>@drawable/bd_st</item>
        <item>@drawable/bd_bm</item>
        <item>@drawable/bd_dark2</item>
        <item>@drawable/bd_l</item>
        <item>@drawable/bd_um</item>
        <item>@drawable/bd_ch</item>
    </string-array>
</resources>
