<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="215dp"
    android:layout_margin="10dp"
    cardView:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_bd"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="#2d2d2d"
            android:contentDescription="@string/poster"
            android:scaleType="center" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/movie_title"
            android:textColor="#2d2d2d"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/movie_desc"
            android:textColor="#2d2d2d"
            android:textSize="12sp" />
    </LinearLayout>

</android.support.v7.widget.CardView>